clusters/homelab/apps/git/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: git
  labels:
    gateway.infra.services/allow-routes: "true"
