clusters/homelab/apps/git/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: git-ui
  namespace: git
spec:
  selector:
    app: forgejo
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
