clusters/homelab/apps/git/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
  namespace: git
spec:
  parentRefs:
    - name: services
      namespace: infra
      sectionName: main
  hostnames: [
    "git.klimlive.de"
  ]
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: git-ui
          port: 3000
